# leafpredictor

./: ChangeLog  LeafPredictor.vcproj  Makefile.am  Makefile.in  NEWS  README.in  configure  configure.ac  doxconf  doxconf.in
LeafPredictor.xcodeproj/: Makefile.in
doc/: Makefile.in
leafpredictor/trunk/: AUTHORS  ChangeLog  LeafPredictor-Info.plist  LeafPredictor.sln  LeafPredictor.vcproj  Makefile.am  Makefile.in  NEWS  THANKS  configure  configure.ac  doxconf
leafpredictor/trunk/LeafPredictor.xcodeproj/: Makefile.in  project.pbxproj  uncle_fungus.mode1  uncle_fungus.pbxuser
leafpredictor/trunk/doc/: Makefile.am  Makefile.in
leafpredictor/trunk/src/: Makefile.am  Makefile.in  aboutDialog.cpp  eigenSystem.cpp  imageDialog.cpp  leafCanvas.cpp  leafPrediction.cpp  main.cpp  mainDialog.cpp  pcSpaceDialog.cpp  projectDialog.cpp  staticBoldedText.cpp
leafpredictor/trunk/src/include/: Makefile.am  Makefile.in  aboutDialog.h  eigenSystem.h  imageDialog.h  leafCanvas.h  leafPrediction.h  leafpredictor.h  leafpredictor.h.in  leafpredictor.xpm.h  main.h  mainDialog.h  projectDialog.h  tools.h
m4/: Makefile.am  Makefile.in
resources/: Makefile.in  leafpredictor.rc
src/: Makefile.am  Makefile.in  aboutDialog.cpp  dcsvg.cpp  eigenSystem.cpp  imageDialog.cpp  leafCanvas.cpp  leafDialog.cpp  main.cpp  mainDialog.cpp  projectDialog.cpp  staticBoldedText.cpp
src/include/: Makefile.am  Makefile.in  eigenSystem.h  imageDialog.h  leafCanvas.h  leafDialog.h  leafpredictor.h  leafpredictor.h.in  mainDialog.h  pcSpaceDialog.h  projectDialog.h  staticBoldedText.h  tools.h
(+8 files in other folders)
